[gd_scene format=3 uid="uid://bwwv3sibc50m4"]

[ext_resource type="Script" uid="uid://b1yahn21hgwbd" path="res://Resources/Enemies/enemy_class.gd" id="1_dvpn2"]
[ext_resource type="Texture2D" uid="uid://bby03wvnyaw12" path="res://Resources/Art/Enemies/trogg_enemy.png" id="2_k24bp"]
[ext_resource type="Shader" uid="uid://dme8q462mcrjg" path="res://Shaders/card_selector.gdshader" id="3_4215w"]
[ext_resource type="PackedScene" uid="uid://bytg7c32ifr14" path="res://Scenes/UI/Enemy/enemy_buffs.tscn" id="3_x28el"]
[ext_resource type="PackedScene" uid="uid://dkkuwrl21x050" path="res://Scenes/UI/Enemy/enemy_debuffs.tscn" id="4_bjjea"]
[ext_resource type="Texture2D" uid="uid://boqov0yviery2" path="res://Resources/Art/UIElements/glow_effect1.png" id="4_vhyvu"]
[ext_resource type="PackedScene" uid="uid://bpd2de3rcq1y4" path="res://Scenes/Enemies/enemy_deck_node.tscn" id="5_87uqv"]
[ext_resource type="PackedScene" uid="uid://4upwwtb4irk8" path="res://Scenes/Enemies/enemy_skills_node.tscn" id="5_orf8w"]
[ext_resource type="Script" uid="uid://da58q7xfa5l85" path="res://Scripts/Enemies/Trogg/Runes.gd" id="7_qdf2y"]
[ext_resource type="Texture2D" uid="uid://dt0ya4xvwf842" path="res://Resources/UI/health_bar_under.png" id="8_u54sm"]
[ext_resource type="Texture2D" uid="uid://bg17x4moack4" path="res://Resources/UI/health_bar_border.png" id="9_xotyc"]
[ext_resource type="Texture2D" uid="uid://cxmblkhdw7e8x" path="res://Resources/UI/health_bar.png" id="10_s27e1"]
[ext_resource type="PackedScene" uid="uid://do64c04vimntg" path="res://Scenes/UI/Tooltips/tooltip_panel.tscn" id="11_4cvw8"]
[ext_resource type="Texture2D" uid="uid://civ7nytitgvth" path="res://Resources/UI/stagger_bar.png" id="14_vhyvu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sjjs4"]
shader = ExtResource("3_4215w")
shader_parameter/onoff = 0.0
shader_parameter/glow_color = Color(1, 1, 1, 1)
shader_parameter/glow_power = 2.0
shader_parameter/glow_shift = 0.3
shader_parameter/glow_radius = 10.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8yrtx"]
size = Vector2(142.5, 174)

[sub_resource type="Gradient" id="Gradient_r0sdc"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yiy73"]
gradient = SubResource("Gradient_r0sdc")
width = 1300
height = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j1tnv"]
bg_color = Color(0.6, 0.6, 0.6, 0.615686)

[node name="BaseEnemy" type="Node2D" unique_id=1369513174]
script = ExtResource("1_dvpn2")

[node name="EnemyImage" type="Sprite2D" parent="." unique_id=514146124]
unique_name_in_owner = true
texture = ExtResource("2_k24bp")

[node name="EnemyBorder" type="Sprite2D" parent="." unique_id=12286129]
unique_name_in_owner = true

[node name="GlowEffect" type="Sprite2D" parent="." unique_id=252580824]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_sjjs4")
position = Vector2(-3.09944e-06, 3.72529e-06)
scale = Vector2(1.07692, 1.06316)
texture = ExtResource("4_vhyvu")

[node name="EnemyBuffs" parent="." unique_id=272886962 instance=ExtResource("3_x28el")]
unique_name_in_owner = true

[node name="EnemyDebuffs" parent="." unique_id=2076837581 instance=ExtResource("4_bjjea")]
unique_name_in_owner = true

[node name="Skills" parent="." unique_id=1035105054 instance=ExtResource("5_orf8w")]
unique_name_in_owner = true

[node name="Deck" parent="." unique_id=1259350867 instance=ExtResource("5_87uqv")]
unique_name_in_owner = true

[node name="Runes" type="Node2D" parent="." unique_id=1121139635]
unique_name_in_owner = true
script = ExtResource("7_qdf2y")

[node name="Area2D" type="Area2D" parent="." unique_id=2004523041]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=1791708826]
position = Vector2(-0.25, -1)
shape = SubResource("RectangleShape2D_8yrtx")

[node name="EnemyUI" type="Control" parent="." unique_id=1525194470]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = -73.0
offset_top = -85.0
offset_right = 73.0
offset_bottom = 89.0

[node name="EnemyStaggerBar" type="TextureProgressBar" parent="EnemyUI" unique_id=158955738]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = -579.0
offset_top = -49.0
offset_right = 721.0
offset_bottom = -25.0
texture_under = ExtResource("8_u54sm")
texture_over = ExtResource("9_xotyc")
texture_progress = ExtResource("14_vhyvu")

[node name="EnemyStaggerLabel" type="Label" parent="EnemyUI/EnemyStaggerBar" unique_id=1136509483]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.5
offset_top = -17.5
offset_right = 74.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "3000/3000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyHealthBar" type="TextureProgressBar" parent="EnemyUI" unique_id=536318409]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -652.0
offset_top = -26.0
offset_right = 648.0
offset_bottom = -2.0
grow_horizontal = 2
value = 100.0
texture_under = ExtResource("8_u54sm")
texture_over = ExtResource("9_xotyc")
texture_progress = ExtResource("10_s27e1")

[node name="EnemyHealthLabel" type="Label" parent="EnemyUI/EnemyHealthBar" unique_id=1590816724]
unique_name_in_owner = true
layout_mode = 0
offset_left = 578.0
offset_top = 4.0
offset_right = 722.0
offset_bottom = 22.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "3000/3000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoldAndXPBox" type="VBoxContainer" parent="EnemyUI" unique_id=46253487]
unique_name_in_owner = true
layout_mode = 0
offset_left = 149.0
offset_top = 6.0
offset_right = 236.0
offset_bottom = 46.0

[node name="EnemyGold" type="Label" parent="EnemyUI/GoldAndXPBox" unique_id=1789676923]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "2g"

[node name="EnemyXP" type="Label" parent="EnemyUI/GoldAndXPBox" unique_id=61945262]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "2xp"

[node name="EnemySelectionHealth" type="Label" parent="EnemyUI" unique_id=1370865480]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -57.0
offset_top = -22.0
offset_right = 55.0
offset_bottom = -6.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "110/120"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyHealthBar2" type="TextureProgressBar" parent="EnemyUI/EnemySelectionHealth" unique_id=1489078488]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -72.0
offset_top = 3.0
offset_right = 1228.0
offset_bottom = 27.0
grow_horizontal = 2
scale = Vector2(0.112245, 0.46176)
value = 100.0
texture_under = SubResource("GradientTexture2D_yiy73")
texture_progress = ExtResource("10_s27e1")

[node name="StatContainer" type="VBoxContainer" parent="EnemyUI" unique_id=1167210705]
unique_name_in_owner = true
layout_mode = 0
offset_left = 156.0
offset_top = 66.0
offset_right = 252.0
offset_bottom = 164.0

[node name="AttackLabel" type="Label" parent="EnemyUI/StatContainer" unique_id=2125607870]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Atk: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackPanel" type="Panel" parent="EnemyUI/StatContainer/AttackLabel" unique_id=1981420282]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DefenseLabel" type="Label" parent="EnemyUI/StatContainer" unique_id=366164538]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Atk: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DefensePanel" type="Panel" parent="EnemyUI/StatContainer/DefenseLabel" unique_id=342207982]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ArmorLabel" type="Label" parent="EnemyUI/StatContainer" unique_id=1534695737]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Def: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ArmorPanel" type="Panel" parent="EnemyUI/StatContainer/ArmorLabel" unique_id=1035909385]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StunIndicator" type="Panel" parent="." unique_id=257852930]
unique_name_in_owner = true
visible = false
offset_left = -73.0
offset_top = -90.0
offset_right = 72.0
offset_bottom = 90.0
theme_override_styles/panel = SubResource("StyleBoxFlat_j1tnv")

[node name="StunLabel" type="Label" parent="StunIndicator" unique_id=853913083]
unique_name_in_owner = true
layout_mode = 0
offset_left = 65.0
offset_top = 83.0
offset_right = 81.0
offset_bottom = 99.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "1
"

[node name="TooltipPanel" parent="." unique_id=184987963 instance=ExtResource("11_4cvw8")]
unique_name_in_owner = true

[connection signal="mouse_entered" from="EnemyUI" to="." method="_on_enemy_ui_mouse_entered"]
[connection signal="mouse_exited" from="EnemyUI" to="." method="_on_enemy_ui_mouse_exited"]
